fix z-index leftnav

--- a/proyecto/front/css/base.css
+++ b/proyecto/front/css/base.css
@@ -219,6 +219,7 @@ div{
   box-sizing:border-box;
   padding-top: 4rem;
   transition: width 200ms ease;
+  z-index: 2;
 }
 .left-nav-active{
   width: 20rem;
